--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <version>1.1.23</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
